pkgs/drbd9/drbd/.compat_test.6.1.26/queue_limits_has_discard_zeroes_data.stderr
<command-line>: warning: "KBUILD_MODNAME" redefined
<command-line>: note: this is the location of the previous definition
/home/hernad/nix/kernel/build-drbd/drbd/drbd-kernel-compat/tests/queue_limits_has_discard_zeroes_data.c: In function ‘foo’:
/home/hernad/nix/kernel/build-drbd/drbd/drbd-kernel-compat/tests/queue_limits_has_discard_zeroes_data.c:7:11: error: ‘struct queue_limits’ has no member named ‘discard_zeroes_data’
    7 |        lim->discard_zeroes_data = 1;
      |           ^~
